# golang

./: .gitignore  BUILD.bazel  Building_cgo_dependent_golang_lib_with_bazel.md  Generate_HelmChart.md  How_to_deploy.md  MODULE.bazel  PROBLEM.md  Prepare_build_oci_4_k8s.md  README.md  Upgrade.md  WORKSPACE  WORKSPACE.bazel  bazel-bin  bazel-golang  bazel-out  bazel-testlogs  deps.bzl  go.mod  go.sum  repositories.bzl
cgoexample/: BUILD.bazel  hello.c  main.go  sum.c
cgoexample/add/: BUILD.bazel  add.c  add.cpp  add.h  adder.go  adder_test.go
cgoexample/hello/: BUILD.bazel  hello.c  hello.go  hello.h
devops/helm/hello-chart/: values.yaml
devops/helm/hello-chart/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  ingress.yaml  serviceaccount.yaml
dockerfiles/base/: Dockerfile  command.sh
grpcdemo/echo/: echo.proto
grpcdemo/greeter_client/: main.go
grpcdemo/greeter_server/: main.go
hello/: BUILD.bazel  go.mod  hello.go  hellotest.go  main.go
hello/hello_deploy/: Chart.yaml  build.sh  skaffold.yaml  values.yaml
hello/hello_deploy/templates/: deployment.yaml  hpa.yaml  ingress.yaml  service.yaml
hello/oci/: BUILD.bazel  main.go  test.yaml
hello/proto/: BUILD.bazel  go.mod  greeter.proto  person.proto  place.proto  routeguide.proto  thing.proto
hello/room/: BUILD.bazel  room.go
httpdemo/cmd/: BUILD.bazel  main.go
httpdemo/greetings/: BUILD.bazel  greetings.go
httpdemo/handlers/: BUILD.bazel  handler.go
httpdemo/html/: BUILD  upload.html
playvideo/: BUILD  main.go
playvideo/analyze/: BUILD  main.go
playvideo/play/: BUILD.bazel  README.md  main.go
playvideo/src/: BUILD
playvideo/stream/: main.go
playvideo/stream/nginx-rtmp_deploy/: Chart.yaml  values.yaml
playvideo/stream/nginx-rtmp_deploy/configmap/: create.sh  nginx.conf
playvideo/stream/nginx-rtmp_deploy/templates/: configmap.yaml  deployment.yaml  hpa.yaml  service.yaml
playvideo/stream/stream_deploy/: Chart.yaml  values.yaml
playvideo/stream/stream_deploy/templates/: deployment.yaml  ingress.yaml  service.yaml
proto/: BUILD.bazel
serviceone/: BUILD.bazel  main.go
serviceone/client/: BUILD.bazel  client.go  main.go
serviceone/pb/: BUILD.bazel  pb.proto
serviceone/server/: BUILD.bazel  main.go  server.go
