load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_binary(
    name = "hello",
    embed = [":hello_lib"],
    visibility = ["//visibility:public"],
)

go_library(
    name = "hello_lib",
    srcs = ["hello.go"],
    importpath = "golang-bazel-demo-app/hello",
    visibility = ["//visibility:public"],
    deps = ["//hello/room:room_lib"],
)
