load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_binary")

go_library(
    name = "cmd_lib",
    srcs = ["main.go"],
    importpath = "golang-bazel-demo-app/httpdemo/cmd",
    visibility = ["//visibility:public"],
    deps = [
        "//httpdemo/handlers:handler_lib",
        "@com_github_gorilla_mux//:go_default_library",
    ],
)

go_binary(
    name = "cmd",
    embed = [":cmd_lib"],
    visibility = ["//visibility:public"],
)