load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
package(default_visibility = ["//visibility:public"])

go_library(
    name = "cmd_lib",
    srcs = ["main.go"],
    data = ["//httpdemo/html:html_files"],
    importpath = "golang-bazel-demo-app/httpdemo/cmd",
    visibility = ["//visibility:public"],
    deps = [
        "//httpdemo/handlers:handler_lib",
        "@com_github_gorilla_mux//:mux",
    ],
)

go_binary(
    name = "cmd",
    embed = [":cmd_lib"],
    visibility = ["//visibility:public"],
)


