load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_binary")
package(default_visibility = ["//visibility:public"])

go_binary(
    name = "client",
    embed = [":client_lib"],
    visibility = ["//visibility:public"],
)

go_library(
    name = "client_lib",
    srcs = ["main.go"],
    importpath = "golang-bazel-demo-app/serviceone/client",
    visibility = ["//visibility:public"],
    deps = [
        "//serviceone/pb",
        "@org_golang_google_grpc//:go_default_library",
    ],
)
