load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")
load("@rules_proto_grpc//go:defs.bzl", "go_grpc_library")
load("@rules_proto_grpc//go:defs.bzl", "go_grpc_compile")

package(default_visibility = ["//visibility:public"])

proto_library(
    name = "pb_proto",
    srcs = ["pb.proto"],
    deps = [],
)

go_grpc_library(
    name = "pb_go_grpc",
    importpath = "golang-bazel-demo-app/serviceone/pb",
    protos = [
        ":pb_proto"
    ],
)


