load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
package(default_visibility = ["//visibility:public"])

go_binary(
    name = "serviceone",
    embed = [":serviceone_lib"],
    visibility = ["//visibility:public"],
)

go_library(
    name = "serviceone_lib",
    srcs = ["main.go"],
    importpath = "golang-bazel-demo-app/serviceone/server",
    visibility = ["//visibility:public"],
    deps = [
        "//serviceone/pb",
        "@org_golang_google_grpc//:go_default_library",
    ],
)
